--- a/src/components/Iam.jsx/styles.module.scss
+++ b/src/components/Iam.jsx/styles.module.scss
@@ -88,10 +88,19 @@ section{
         }
         
         img {
-            width: 280px;
-            height: 320px;
-            border-radius: 40%;
+            width: 300px;
+            height: 280px;
+            border-radius: 60%;
             margin-top: 2rem;
+
+            @media (max-width: 375px) {
+                width: 240px;
+                height: 240px;
+            }
+
+            @media (max-width: 320px) {
+                width: 200px;
+            }
         }
     }
 
@@ -99,7 +108,6 @@ section{
         .divSection {
           flex-direction: column; 
           align-items: center;
-          margin-top: 200px;
 
           .DivMe{
             align-items: center;
