--- a/src/components/Portfolio/myProjects/styles.module.scss
+++ b/src/components/Portfolio/myProjects/styles.module.scss
@@ -72,8 +72,8 @@ article {
                 cursor: pointer;
                 transition: background-color 0.3s ease;
                 font-size: 32px;
-                width: 40px;
-                height: 40px;
+                width: 25px;
+                height: 50px;
                 margin-bottom: 50px;
                 border-radius: 10px;
                 
@@ -81,24 +81,31 @@ article {
                     background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
                 }
 
-                @media (max-width: 1024px) {
-                    
-                }
-
                 @media (max-width: 768px) {
-                    
+                    height: 48px;
                 }
                 
                 @media (max-width: 425px) {
-                    
+                    height: 42px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
                 
                 @media (max-width: 375px) {
-                    
+                    width: 20px;
+                    height: 35px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
                    
                 @media (max-width: 320px) {
-                    
+                    width: 20px;
+                    height: 35px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
             }
             
@@ -290,8 +297,7 @@ article {
                     font-size: 28px;
 
                     @media (max-width: 1024px) {
-                        margin-left: -20px;
-                        bottom: 0;
+                        margin-left: -2px;
                         height: 50px;
                         font-size: 24px;
                     }
@@ -384,32 +390,46 @@ article {
             }
 
             .prevNextButton {
-                background-color: transparent;
-                color: var(--LightCyan);
+                background: var(--Cyan-write);
+                color: var(--White-write);
                 border: none;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
-                font-size: 160px;
+                font-size: 32px;
+                width: 25px;
+                height: 50px;
                 margin-bottom: 50px;
+                border-radius: 10px;
                 
                 &:hover {
-                    color: var(--Cyan-write);
-                }
-
-                @media (max-width: 320px) {
-                    font-size: 100px;
-                }
-
-                @media (max-width: 375px) {
-                    font-size: 40px;
-                }
-
-                @media (max-width: 425px) {
-                    font-size: 40px;
+                    background: linear-gradient(-1855deg, var(--StrongCyan), var(--LightCyan));
                 }
 
                 @media (max-width: 768px) {
-                    font-size: 40px;
+                    height: 48px;
+                }
+                
+                @media (max-width: 425px) {
+                    height: 42px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                
+                @media (max-width: 375px) {
+                    width: 20px;
+                    height: 35px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                }
+                   
+                @media (max-width: 320px) {
+                    width: 20px;
+                    height: 35px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
             }
             
@@ -418,6 +438,7 @@ article {
                 display: inline-block;
                 overflow: hidden;
                 margin-bottom: 40px;
+                width: 530px;
 
                 @media (max-width: 320px) {
                     width: 100%;
@@ -447,22 +468,22 @@ article {
                     }
 
                     @media (max-width: 768px) {
-                        width: 100%;
+                        min-width: 100%;
                         height: 280px;
                     }
                     
                     @media (max-width: 425px) {
-                        width: 100%;
+                        min-width: 100%;
                         height: 200px;
                     }
                     
                     @media (max-width: 375px) {
-                        width: 100%;
+                        min-width: 100%;
                         height: 200px;
                     }
                     
                     @media (max-width: 320px) {
-                        width: 100%;
+                        min-width: 100%;
                         height: 200px;
                     }
                 }
@@ -615,8 +636,7 @@ article {
                     font-size: 28px;
 
                     @media (max-width: 1024px) {
-                        margin-left: -20px;
-                        bottom: 0;
+                        margin-left: 10px;
                         height: 50px;
                         font-size: 24px;
                     }
