--- a/src/Footer/styles.module.scss
+++ b/src/Footer/styles.module.scss
@@ -55,6 +55,13 @@
     justify-content: center;
     align-items: center;
 
+    @media (max-width: 1024px) {
+      justify-content: space-between;
+      width: 80%;
+      flex-wrap: wrap;
+      margin: 0 auto;
+      }
+
     @media (max-width: 768px) {
     justify-content: space-between;
     width: 100%;
@@ -141,6 +148,11 @@
       flex-direction: column;
       align-items: center;
       width: 280px;
+
+      @media (max-width: 1024px) {
+        width: 100%;
+        height: 250px;
+      }
       
       @media (max-width: 768px) {
         width: 100%;
@@ -169,6 +181,10 @@
     }
 
     #email{
+
+      @media (max-width: 1024px) {
+        font-size: 13px;
+      }
       @media (max-width: 768px) {
         font-size: 13px;
       }
