--- a/src/components/Portfolio/myProjects/styles.module.scss
+++ b/src/components/Portfolio/myProjects/styles.module.scss
@@ -71,7 +71,7 @@ article {
                 border: none;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
-                width: 25px;
+                width: 35px;
                 height: 50px;
                 margin-bottom: 50px;
                 border-radius: 10px;
@@ -85,6 +85,7 @@ article {
                 }
                 
                 @media (max-width: 425px) {
+                    width: 28;
                     height: 42px;
                     display: flex;
                     justify-content: center;
@@ -92,7 +93,7 @@ article {
                 }
                 
                 @media (max-width: 375px) {
-                    width: 20px;
+                    width: 23px;
                     height: 35px;
                     display: flex;
                     justify-content: center;
@@ -100,7 +101,7 @@ article {
                 }
                    
                 @media (max-width: 320px) {
-                    width: 10px;
+                    width: 25px;
                     height: 35px;
                     display: flex;
                     justify-content: center;
@@ -313,14 +314,14 @@ article {
                         font-size: 14px;
                         width: 100px;
                         height: 40px;
-                        left: 25%;
+                        left: 28.5%;
                         margin-left: 17px;
                     }
 
                     @media (max-width: 375px) {
                         font-size: 14px;
                         width: 100px;
-                        left: 25%;
+                        left: 29%;
                         height: 35px;
                         margin-left: 9px;
                     }
@@ -328,7 +329,7 @@ article {
                     @media (max-width: 320px) {
                         font-size: 14px;
                         width: 100px;
-                        left: 17%;
+                        left: 26%;
                         height: 35px;
                     }
                 }
@@ -394,7 +395,7 @@ article {
                 border: none;
                 cursor: pointer;
                 transition: background-color 0.3s ease;
-                width: 25px;
+                width: 35px;
                 height: 50px;
                 margin-bottom: 50px;
                 border-radius: 10px;
@@ -408,6 +409,7 @@ article {
                 }
                 
                 @media (max-width: 425px) {
+                    width: 25px;
                     height: 42px;
                     display: flex;
                     justify-content: center;
@@ -415,7 +417,7 @@ article {
                 }
                 
                 @media (max-width: 375px) {
-                    width: 20px;
+                    width: 14px;
                     height: 35px;
                     display: flex;
                     justify-content: center;
@@ -423,7 +425,7 @@ article {
                 }
                    
                 @media (max-width: 320px) {
-                    width: 20px;
+                    width: 13px;
                     height: 35px;
                     display: flex;
                     justify-content: center;
@@ -642,7 +644,6 @@ article {
                     @media (max-width: 768px) {
                         font-size: 20px;
                         height: 45px;
-                        bottom: 0;
                         left: 25%;
                         margin-left: 60px;
                     }
@@ -651,14 +652,16 @@ article {
                         font-size: 14px;
                         width: 100px;
                         height: 40px;
-                        left: 25%;
+                        bottom: 0;
+                        left: 29%;
                         margin-left: 17px;
                     }
 
                     @media (max-width: 375px) {
                         font-size: 14px;
                         width: 100px;
-                        left: 25%;
+                        bottom: 0;
+                        left: 29%;
                         height: 35px;
                         margin-left: 9px;
                     }
@@ -666,7 +669,8 @@ article {
                     @media (max-width: 320px) {
                         font-size: 14px;
                         width: 100px;
-                        left: 17%;
+                        bottom: 0;
+                        left: 26%;
                         height: 35px;
                     }
                 }
